--- a/documentation/style.css
+++ b/documentation/style.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=PT+Sans&Source+Sans+Pro&Roboto+Mono&display=swap");
+
+
 * {
 	-webkit-font-smoothing: antialiased;
 	-webkit-overflow-scrolling: touch;
@@ -103,6 +105,12 @@ img {
 a[disabled] {
 	cursor: not-allowed;
 	opacity: .6
+}
+
+a:hover {
+	opacity:0.7;
+	transition: all 0.25s;
+	text-underline-offset:0.3rem;
 }
 
 kbd {
@@ -276,8 +284,9 @@ main.hidden {
 .sidebar>h1 {
 	margin: 0 auto 1rem;
 	font-size: 1.5rem;
-	font-weight: 300;
-	text-align: center
+	font-weight: 700;
+	text-align: left;
+	padding-left:1.5rem;
 }
 
 .sidebar>h1 a {
@@ -291,8 +300,9 @@ main.hidden {
 }
 
 .sidebar .sidebar-nav {
-	line-height: 2em;
-	padding-bottom: 40px
+	line-height: 2rem;
+	padding-left: 1rem;
+	padding-bottom: 1.5rem;
 }
 
 .sidebar li.collapse .app-sub-sidebar {
@@ -300,7 +310,7 @@ main.hidden {
 }
 
 .sidebar ul {
-	margin: 0 0 0 15px;
+	margin: 0 0 0 1rem;
 	padding: 0
 }
 
@@ -320,7 +330,7 @@ main.hidden {
 }
 
 .sidebar ul li ul {
-	padding-left: 20px
+	padding-left: 4rem;
 }
 
 .sidebar::-webkit-scrollbar {
@@ -344,15 +354,15 @@ main.hidden {
 	background-color: transparent;
 	border: 0;
 	outline: none;
-	padding: 10px;
+	padding: 8px;
 	position: absolute;
-	bottom: 0;
-	left: 0;
+	bottom: .5rem;
+	left: .5rem;
 	text-align: center;
 	transition: opacity .3s;
-	width: 284px;
+	width: 280px;
 	z-index: 30;
-	cursor: pointer
+	cursor: pointer;
 }
 
 .sidebar-toggle:hover .sidebar-toggle-button {
@@ -740,12 +750,12 @@ body {
 
 .sidebar ul li a {
 	color: var(--sidebarSublink);
-	font-size: 14px;
+	font-size: 1rem;
 	font-weight: 400;
 	overflow: hidden;
 	text-decoration: none;
 	text-overflow: ellipsis;
-	white-space: nowrap
+	white-space: nowrap;
 }
 
 .sidebar ul li a:hover {
@@ -1021,8 +1031,8 @@ pre:after {
 	position: absolute;
 	right: 12px;
     top: 0px;
-	width: 24px;
-	height: 24px;
+	width: 20px;
+	height: 20px;
 	background-repeat: no-repeat;
 	background-image: var(--toogleImage);
 	-o-background-size: cover;
