--- a/documentation/style.css
+++ b/documentation/style.css
@@ -429,6 +429,19 @@ body.sticky .sidebar-toggle {
 	width: 100%
 }
 
+table th:first-of-type {
+    width: 10%;
+}
+table th:nth-of-type(2) {
+    width: 10%;
+}
+table th:nth-of-type(3) {
+    width: 20%;
+}
+table th:last-of-type {
+    width: 60%;
+}
+
 .markdown-section th {
 	font-weight: 700
 }
