--- a/documentation/style.css
+++ b/documentation/style.css
@@ -310,18 +310,22 @@ main.hidden {
 }
 
 .sidebar ul {
-	margin: 0 0 0 1rem;
+	margin: 0 0 0 1.2rem;
 	padding: 0
 }
 
 .sidebar li>p {
 	font-weight: 700;
-	margin: 0;
+	margin: 0.6rem 0;
+}
+
+.sidebar ul li {
+	margin-bottom: 0.3rem;
 }
 
 .sidebar ul,
 .sidebar ul li {
-	list-style: none
+	list-style: none;
 }
 
 .sidebar ul li a {
